--- a/src/static/login_style.css
+++ b/src/static/login_style.css
@@ -48,7 +48,7 @@ body {
    }
    
    .btn-primary {
-     background-color: #94fe83;
+     background-color: #a6d4ff;
      border-radius: 50px;
      padding: 10px 25px;
      font-size: 1.2rem;
