--- a/src/templates/login_page_pooya.html
+++ b/src/templates/login_page_pooya.html
@@ -6,7 +6,162 @@
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> دانشگاه فردوسی مشهد -پرتال جامع اعضاء </title>
+    <title> صفحه ورود</title>
+    <script type="text/javascript" src="md5.js"></script> !
+
+    <script>
+        function RefreshCaptcha() {
+            var gR = function (o) {
+                var res = JSON.parse(o.responseText);
+                if (res.success == "true") {
+                    document.getElementById('secimg').src = res.url;
+                    document.getElementById('rand2').value = res.tet;
+                } else {
+                }
+            };
+            var callback = {success: gR, failure: false};
+            var param = 'action=RefreshCaptcha&CapUserID=' + Math.random();
+            fum.util.Connect.asyncRequest('POST', '/gateway/PuyaAuthenticate.php?', callback, param);
+        }
+
+        function OpenKeyboard(obj) {
+            refobj1 = obj;
+            window.status = '';
+            kbwin = window.open("../shares/keyboard.php", "kbwin", "toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=no, resizable=yes, copyhistory=no, width=430, height=200, addressbar=no, top=200, left=200")
+        }
+
+        function ChkEmptiness(Object) {
+            if (Object.value.length == 0) {
+                alert("این فیلد نباید خالی باشد");
+                Object.focus();
+                return false;
+            }
+            return true;
+        }
+
+        function ChkForm(FormObj) {
+            var t = FormObj.DummyVar.value;
+            if (!ChkEmptiness(FormObj.UserID) || !ChkEmptiness(FormObj.DummyVar))
+                return false;
+            if (t.length < 6) {
+                alert('Password must be at least 6 characters long!');
+                FormObj.DummyVar.focus();
+                return false;
+            }
+            fum.util.password.checkPass();
+            FormObj.pswdStatus.value = fum.util.password.result;
+           // FormObj.UserPassword.value = md5.getmd5(FormObj.DummyVar.value);
+            FormObj.UserPassword.value = FormObj.DummyVar.value;
+            FormObj.DummyVar.value = '';
+            return true;
+        }
+        </script>
+        <link rel="stylesheet" href="../shares/UI/css/bootstrap-4-rtl.min.css">
+        <link rel="stylesheet" href="../shares/UI/css/font-awesome-all.min.css">
+        <link rel="stylesheet" href="../shares/UI/css/custom-style.css">
+        <script src="../shares/UI/js/jquery-3.3.1.min.js"></script>
+        <script src="../shares/UI/js/popper.min.js"></script>
+        <script src="../shares/UI/js/bootstrap-4.2.1.min.js"></script>
+        <style>
+        .login-form .input-group {
+            border: 1px solid #c2cad8;
+            background: #fff;
+            padding: 3px;
+            display: flex;
+            align-items: center;
+            color: #444;
+        }
+
+        .login-form .input-group i {
+            opacity: 0.5;
+            font-size: 20px;
+        }
+
+        .fa-sync {
+            font-size: 20px;
+            vertical-align: middle;
+        }
+
+        h1, h2 {
+            font-size: 18px;
+        }
+
+        .fum-logo {
+            width: 80px;
+        }
+
+        .left-side {
+            background: #167abc;
+            color: rgba(255, 255, 255, 0.8);;
+        }
+
+        .left-side a {
+            color: rgba(255, 255, 255, 1);
+            transition: all 0.2s;
+            text-decoration: none;
+            opacity: 0.8;
+        }
+
+        .left-side a:hover {
+            color: rgba(255, 255, 255, 1);
+            opacity: 1;
+        }
+
+        .left-side .services {
+            color: rgba(255, 255, 255, 0.9);
+        }
+
+        .left-side .services a {
+            opacity: 1;
+        }
+
+        .fa-keyboard {
+            padding-top: 5px;
+            padding-left: 2px;
+        }
+
+        .img-white {
+            filter: brightness(300%);
+        }
+
+        .size-4 {
+            width: 48px;
+        }
+
+        .services .carousel-inner {
+            height: 170px;
+        }
+
+        .services .carousel-controls a {
+            position: relative;
+            display: inline;
+            font-size: 20px;
+            opacity: 0.5;
+        }
+
+        .services .carousel-indicators {
+            position: relative;
+        }
+
+        .carousel-indicators li {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+        }
+
+        @media screen and (max-width: 576px) {
+            .forget-pass {
+                text-align: center !important;
+                margin-top: 10px;
+            }
+        }
+    </style>
+    <script>
+        $(function () {
+            $("input[required]").attr("oninvalid", "this.setCustomValidity('این فیلد الزامی است.')");
+            $("input[required]").attr("oninput", "setCustomValidity('')");
+        });
+    </script>
 </head>
 <body dir="rtl">
 <main class="d-flex align-items-center min-vh-100 py-3 py-md-0">
@@ -16,14 +171,16 @@
                 <div class="login-card row bg-light shadow mx-2">
                     <div class="col-md-7 p-4 pt-5 align-self-center">
                         <h1 class="text-center">
+                            <a href="https://www.um.ac.ir" target="_blank" title="دانشگاه فردوسی مشهد">
+                                <img class="fum-logo" src="../static/images/fum-logo.png">
                             </a>
                         </h1>
                         <h2 class="text-center my-3">
                         <span>
-                        پرتال ورود یکپارچه اعضا
+                            پرتال ورود یکپارچه اعضا <br> <br>پروژه دانشگاهی <br> <br> نام گروه : ?
                         </span>
                         </h2>
-                        <form class="login-form px-md-4" name="LoginForm" action="https://pooya.um.ac.ir/gateway/UserInterim.php" method="POST"
+                                                                        <form class="login-form px-md-4" name="LoginForm" action="https://pooya.um.ac.ir/gateway/UserInterim.php" method="POST"
                               onSubmit="return ChkForm(this);" target="">
                             <input name="UserPassword" type="hidden" value="">
                             <input type='hidden' id='pswdStatus' name='pswdStatus'>
@@ -33,6 +190,7 @@
                                         <input type="text" name="UserID" id="UserID" class="form-control border-0"
                                                required
                                                placeholder="نام کاربری">
+                                        <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['UserID'])"
                                            tabindex="-1">
                                             <i class="fa text-secondary fa-keyboard"></i>
                                         </a>
@@ -45,7 +203,8 @@
                                     <div class="input-group pr-1 rounded">
                                         <input type="password" name="DummyVar" id="DummyVar" maxlength="30"
                                                required class="form-control border-0" placeholder="رمز عبور">
-                                               tabindex="-1">
+                                        <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['DummyVar'])"
+                                           tabindex="-1">
                                             <i class="fa text-secondary fa-keyboard"></i>
                                         </a>
                                         <i class="fa text-secondary fa-lock"></i>
@@ -58,7 +217,8 @@
                                 <input type="hidden" id="rand2" name="rand2" value="SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0=" >
                                 <input type="text" name="mysecpngco" id="mysecpngco" autocomplete="off" maxlength="20"
                                        required class="form-control border-0" placeholder="کد امنیتی">
-                                       tabindex="-1">
+                                <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['mysecpngco'])"
+                                   tabindex="-1">
                                     <i class="fa text-secondary fa-keyboard"></i>
                                 </a>
                                 <i class="fa text-secondary fa-exclamation-circle"></i>
@@ -67,17 +227,20 @@
                         </div>
                         <div class="form-group row text-center">
                         <div class="col-12">
-\                      <span class="fa fa-sync text-dark"></span>
+                            <div><img id="secimg" name="secimg" alt="Security Code" src="../static/images/ShowSecurityImage.php@rand=1337222383&rand2=SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0="/> <a href="JavaScript:RefreshCaptcha();">
+                      <span class="fa fa-sync text-dark"></span>
                     </a></div>
                     </div>
                         <div class="col-12">
                         کاراکترهایی که در تصویر مشاهده می نمایید در فیلد کد امنیتی به ترتیب وارد نمایید.
                         </div>
-                    </div>                            <div class="form-group row align-items-center">
+                    </div>       
+                            <div class="form-group row align-items-center">
                                 <div class="col-md-6">
                                     <button type="submit" class="btn btn-primary btn-block" value="ورود">ورود</button>
                                 </div>
                                 <div class="col-md-6 text-right forget-pass">
+                                    <a href="user_recovery_pass.html">فراموشی رمز ورود</a>
                                 </div>
                             </div>
                         </form>
@@ -86,10 +249,11 @@
                         <div class="row text-center services h-50 align-content-end">
                             <div class="col">
                                 <div id="msgSlides" class="carousel slide" data-ride="carousel">
+                                    <!-- The slideshow -->
                                     <div class="carousel-inner">
-                                        <div class="carousel-item active">
+                                                                                <div class="carousel-item active">
                                         <span class="font-weight-bold mb-2 d-block">
-                                    تلفن پشتیبانی
+                                        تلفن پشتیبانی
                                         </span>
                                             <p class="mt-3">
                                                 <i class="fa fa-2x d-block fa-phone-square"></i>
@@ -123,6 +287,7 @@
                                                 </span>
                                             </p>
                                         </div>
+
                                         <div class="carousel-item">
                                         <span class="font-weight-bold mb-2 d-block">
                                         گزارش خطا (تیکتینگ)
@@ -148,18 +313,20 @@
                                         </div>
                                         <div class="carousel-item">
                                         <span class="font-weight-bold mb-2 d-block">
-                                        درخواست توسعه               
+                                        درخواست توسعه
                                         </span>
                                             <p>
                                                 <i class="fa fa-hand-point-left"></i>
                                                 درخواست طراحی یا تغییر سامانه ها بر اساس شیوه نامه بهبود فرآیندهای
                                                 دانشگاه مندرج در منو <a class="text-warning"
-                                                target="_blank">دستورالعملها و فرآیندها/ نرم
+                                                                        href="http://ict.um.ac.ir/index.php?option=com_content&view=category&id=50&Itemid=377&lang=fa"
+                                                                        target="_blank">دستورالعملها و فرآیندها/ نرم
                                                     افزار</a> سایت
+                                                <a href="http://ict.um.ac.ir/" target="_blank" class="text-warning">ict.um.ac.ir</a>
                                                 انجام می شود. </p>
                                         </div>
                                     </div>
-
+                                    <!-- Indicators -->
                                     <ul class="carousel-indicators">
                                                                                 <li data-target="#msgSlides" data-slide-to="0" class="active"></li>
                                         <li data-target="#msgSlides" data-slide-to="1"></li>
@@ -174,11 +341,12 @@
                         <div class="row text-center py-2 h-50 align-content-end ">
                             <div class="col-12 mb-2">
 
-                        </div>
+                            </div>
                             <div class="col-12">
                                 <div style="font-size: 11px;">
                                     هر گونه سوء استفاده از این سایت به استناد
                                     <a class="border-bottom" style="font-size: 11px;"
+                                       href="http://ict.um.ac.ir/index.php?option=com_content&amp;view=article&amp;id=90&amp;Itemid=284"
                                        target="_blank">
                                         آیین نامه تخلفات رایانه ای </a> تحت پیگرد قانونی قرار خواهد گرفت.
                                 </div>
@@ -198,5 +366,19 @@
 
     </div>
 </main>
+
+<script type="text/javascript">
+    fum.util.password.pasData = document.getElementById('DummyVar');
+    fum.util.password.uidData = document.getElementById('UserID');
+</script>
+<script>
+    $(document).ready(function () {
+        $("#UserID").focus();
+    });
+
+    var d = new Date();
+    document.cookie = "rand=" + d.getTime() + '_' + d.getTimezoneOffset() + "; expires=Thu, 18 Jun 2019 12:00:00 UTC; path=/";
+</script>
+
 </body>
 </html>
