add requirements.txt file and change the directories order

--- a/src/templates/user_recovery_pass.html
+++ b/src/templates/user_recovery_pass.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> دانشگاه فردوسی مشهد -پرتال جامع اعضاء </title>
-    <link rel="stylesheet" href="../shares/UI/css/bootstrap-4-rtl.min.css">
-    <link rel="stylesheet" href="../shares/UI/css/font-awesome-all.min.css">
-    <link rel="stylesheet" href="../shares/UI/css/custom-style.css">
-    <script src="../shares/UI/js/jquery-3.3.1.min.js"></script>
-    <script src="../shares/UI/js/popper.min.js"></script>
-    <script src="../shares/UI/js/bootstrap-4.2.1.min.js"></script>
+    <link rel="stylesheet" href="../static/bootstrap-4-rtl.min.css">
+    <link rel="stylesheet" href="../static/font-awesome-all.min.css">
+    <link rel="stylesheet" href="../static/custom-style.css">
+    <script src="../static/js/jquery-3.3.1.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap-4.2.1.min.js"></script>
     <style>
         .login-form .input-group {
             border: 1px solid #c2cad8;
