add some route in backend

--- a/src/templates/login_page_pooya.html
+++ b/src/templates/login_page_pooya.html
@@ -227,9 +227,11 @@
                         </div>
                         <div class="form-group row text-center">
                         <div class="col-12">
-                            <div><img id="secimg" name="secimg" alt="Security Code" src="../static/images/ShowSecurityImage.php@rand=1337222383&rand2=SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0="/> <a href="JavaScript:RefreshCaptcha();">
-                      <span class="fa fa-sync text-dark"></span>
-                    </a></div>
+                            <div><img id="secimg" name="secimg" alt="Security Code" src="../static/images/ShowSecurityImage.php@rand=1337222383&rand2=SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0="/>
+                            <a href="JavaScript:RefreshCaptcha();">
+                      <span class="fa fa-sync text-dark">recaptcha</span>
+                    </a>
+                </div>
                     </div>
                         <div class="col-12">
                         کاراکترهایی که در تصویر مشاهده می نمایید در فیلد کد امنیتی به ترتیب وارد نمایید.
@@ -240,7 +242,7 @@
                                     <button type="submit" class="btn btn-primary btn-block" value="ورود">ورود</button>
                                 </div>
                                 <div class="col-md-6 text-right forget-pass">
-                                    <a href="user_recovery_pass.html">فراموشی رمز ورود</a>
+                                    <a href="./user_recovery_pass.html">فراموشی رمز ورود</a>
                                 </div>
                             </div>
                         </form>
