--- a/src/templates/StNo_and_pass_recovery.html
+++ b/src/templates/StNo_and_pass_recovery.html
@@ -6,125 +6,12 @@
   <link rel="stylesheet" href="../static/bootstrap-4-rtl.min.css">
   <link rel="stylesheet" href="../static/font-awesome-all.min.css">
   <link rel="stylesheet" href="../static/custom-style.css">
+  <link rel="stylesheet" href="../static/StNo_and_pass_recovery.css">
   <script src="../static/js/jquery-3.3.1.min.js"></script>
   <script src="../static/js/popper.min.js"></script>
   <script src="../static/js/bootstrap-4.2.1.min.js"></script>
-  <style>
-    .login-form .input-group {
-      border: 1px solid #c2cad8;
-      background: #fff;
-      padding: 3px;
-      display: flex;
-      align-items: center;
-      color: #444;
-    }
+  <script src="../static/js/StNo_and_pass_recovery.js"></script>
 
-    .login-form .input-group i {
-      opacity: 0.5;
-      font-size: 20px;
-    }
-
-    .fa-sync {
-      font-size: 20px;
-      vertical-align: middle;
-    }
-
-    h1, h2 {
-      font-size: 18px;
-    }
-
-    .fum-logo {
-      width: 80px;
-    }
-
-    .left-side {
-      background: #167abc;
-      color: rgba(255, 255, 255, 0.8);;
-    }
-
-    .left-side a {
-      color: rgba(255, 255, 255, 1);
-      transition: all 0.2s;
-      text-decoration: none;
-      opacity: 0.8;
-    }
-
-    .left-side a:hover {
-      color: rgba(255, 255, 255, 1);
-      opacity: 1;
-    }
-
-    .left-side .services {
-      color: rgba(255, 255, 255, 0.9);
-    }
-
-    .left-side .services a {
-      opacity: 1;
-    }
-
-    .fa-keyboard {
-      padding-top: 5px;
-      padding-left: 2px;
-    }
-
-    .img-white {
-      filter: brightness(300%);
-    }
-
-    .size-4 {
-      width: 48px;
-    }
-
-    .services .carousel-inner {
-      height: 150px;
-    }
-
-    .services .carousel-controls a {
-      position: relative;
-      display: inline;
-      font-size: 20px;
-      opacity: 0.5;
-    }
-
-    .services .carousel-indicators {
-      position: relative;
-    }
-
-    .carousel-indicators li {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-    }
-
-    .help-block {
-      font-size: 12px;
-    }
-
-    @media screen and (max-width: 576px) {
-      .forget-pass {
-        text-align: center !important;
-        margin-top: 10px;
-      }
-      .form-group {
-        margin-bottom: 0;
-      }
-      .form-group .input-group {
-        margin-bottom: 10px;
-      }
-      .form-group button {
-        margin-top: 10px;
-      }
-      .capt-img {
-        text-align: center;
-      }
-    }
-  </style>
-  <script>
-      $(function () {
-          $("input[required]").attr("oninvalid", "this.setCustomValidity('این فیلد الزامی است.')");
-          $("input[required]").attr("oninput", "setCustomValidity('')");
-      });
-  </script>
 
 
 </head>
@@ -187,7 +74,7 @@
                   <!-- <div class="capt-img">-->
                     <img id="captImg" name="captImg" src="../static/images/ShowSecurityImage.php@rand=1337222383&rand2=SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0=">
                     <span onclick="document.getElementById('captImg').src = '../educ/exam/ExamCaptcha.php?rand=' + Math.random();">
-                    <i class="fa fa-sync text-dark"></i>
+                    <i class="fa fa-sync text-dark">🔁</i>
                 </span>
                   <!--</div>-->
                 </div>
