--- a/src/templates/student_page.html
+++ b/src/templates/student_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>پرتال ورود یکپارچه اعضا دانشگاه فردوسی مشهد</title>
-    
+
 </head>
 
 <body style="font-family: Tahoma; font-size: 10pt" topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0">
@@ -27,8 +27,11 @@
                                             background-image:url('template/default/images/logo.jpg');">
                                                 </span>
                                             </div>
-                                            <div style="float: right ;margin-top: 10px;margin-right:5px;overflow: hidden;">
-                                                <span style="font-family:iransans;font-size:15px;color: #0c486c;font-weight: bold;padding-right:2px; ">پرتال دانشجویی</span>
+                                            <div
+                                                style="float: right ;margin-top: 10px;margin-right:5px;overflow: hidden;">
+                                                <span
+                                                    style="font-family:iransans;font-size:15px;color: #0c486c;font-weight: bold;padding-right:2px; ">پرتال
+                                                    دانشجویی</span>
                                             </div>
                                         </div>
                                     </td>
@@ -39,28 +42,50 @@
                             <table width="100%" height="100%" cellspacing="0" cellpadding="0" class="header">
                                 <tr>
                                     <td align="left">
-                                        <div class="info" style="margin:0px;padding:0px;position: relative;height: 42px;">
-                                            <div style="float:right;padding-left:10px;padding-top: 5px;overflow: hidden;"> 
-		<span style="background-size: 30px 30px;
+                                        <div class="info"
+                                            style="margin:0px;padding:0px;position: relative;height: 42px;">
+                                            <div
+                                                style="float:right;padding-left:10px;padding-top: 5px;overflow: hidden;">
+                                                <span style="background-size: 30px 30px;
     border-radius: 50%; display: block;
       margin: -1px;
     overflow: hidden;  position: relative;
     width: 30px;z-index: 0;height: 30px;
     background-image:url(../shares/ShowPic.php?PhotoID=250871
     );">
-    </span></div>
-     <div style="float:right;margin-top: 15px;overflow: hidden;"><span style='font-family:iransans;font-size:12px;'>کاربر: شماره دانشجویی + عکس دانشجو  <span style='color:gray;'> () </span>&nbsp;</span>
-        <span style='font-family:iransans;font-size:12px;'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;سال تحصیلی: 1402-1401&nbsp;نیمسال&nbsp;دوم&nbsp;(هفته زوج)<sup style='font-size:6pt;'>18</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href='../educ/stu_portal/TermTypeSelection.php' target='LeftScr'><span style='font-family:iransans;font-size:12px;font-weight:bold'><font color=green>انتخاب دوره آموزشی</font></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></div>
-            <div style="float:left;padding-top: 8px;margin-left:10px"> 
-            <span id='notif-btn' onclick='NotificationMessage.ShowAllNotiofications(this)'  style='position:relative;padding:2px;cursor:pointer;' title='اعلان ها' > 
-                <span style='width:22px;height:19px;position:relative;display:inline-block;'>
-                <strong id='notif-count' style='background:red;position:absolute;right:-5px;top:-5px;font-size:11px;padding:1px;color:white;display:
-                    none;min-width:10px;text-align:center;border-radius:5px'>0</strong> 
-                <i class='fas fa-bell' style='color:#039999;font-size:16px;margin:0 2px;'></i> 
-                </span>
-             </span>
-         
-        <a href='SignOut.php' target='_top' style='padding:2px;' title='خروج' > <i class='fa fa-sign-out-alt' style='color:#b70101;font-size:16px;margin:0 2px;'></i></a></div>
+                                                </span>
+                                            </div>
+                                            <div style="float:right;margin-top: 15px;overflow: hidden;"><span
+                                                    style='font-family:iransans;font-size:12px;'>کاربر: شماره دانشجویی +
+                                                    عکس دانشجو <span style='color:gray;'> () </span>&nbsp;</span>
+                                                <span
+                                                    style='font-family:iransans;font-size:12px;'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;سال
+                                                    تحصیلی: 1402-1401&nbsp;نیمسال&nbsp;دوم&nbsp;(هفته زوج)<sup
+                                                        style='font-size:6pt;'>18</sup></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+                                                    href='../educ/stu_portal/TermTypeSelection.php'
+                                                    target='LeftScr'><span
+                                                        style='font-family:iransans;font-size:12px;font-weight:bold'>
+                                                        <font color=green>انتخاب دوره آموزشی</font>
+                                                    </span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                            </div>
+                                            <div style="float:left;padding-top: 8px;margin-left:10px">
+                                                <span id='notif-btn'
+                                                    onclick='NotificationMessage.ShowAllNotiofications(this)'
+                                                    style='position:relative;padding:2px;cursor:pointer;'
+                                                    title='اعلان ها'>
+                                                    <span
+                                                        style='width:22px;height:19px;position:relative;display:inline-block;'>
+                                                        <strong id='notif-count' style='background:red;position:absolute;right:-5px;top:-5px;font-size:11px;padding:1px;color:white;display:
+                    none;min-width:10px;text-align:center;border-radius:5px'>0</strong>
+                                                        <i class='fas fa-bell'
+                                                            style='color:#039999;font-size:16px;margin:0 2px;'></i>
+                                                    </span>
+                                                </span>
+
+                                                <a href='SignOut.php' target='_top' style='padding:2px;' title='خروج'>
+                                                    <i class='fa fa-sign-out-alt'
+                                                        style='color:#b70101;font-size:16px;margin:0 2px;'></i></a>
+                                            </div>
                                             <div style="clear:both;"></div>
                                         </div>
                                     </td>
@@ -79,16 +104,22 @@
             <td valign="top" class="header1" id="r">
                 </iframe>
             </td>
-            <td class="collapse-bar mnav" onClick="if(r.style.display=='none'){r.style.display=''}else{r.style.display='none';}" width="8px" bgcolor="#e8e8e6">
+            <td class="collapse-bar mnav"
+                onClick="if(r.style.display=='none'){r.style.display=''}else{r.style.display='none';}" width="8px"
+                bgcolor="#e8e8e6">
                 <img border="0" src="template/default/images/t1.gif" width="8px" height="78">
             </td>
             <td valign="top">
                 <table border="0" width="100%" cellspacing="0" cellpadding="0" height="100%">
                     <tr>
-                        <td colspan="5" width="780" style="font-family: iransans;text-align:left;padding-left:10px;padding-top:5px;font-size:13px;">
-                            <a href='#' onclick='javascript: ShowOnlineHelp();' style='margin:0 5px;' data-toggle='tooltip' title='مشاهده راهنما در مورد این صفحه'><i class="fa fa-question-circle"></i> راهنما</a>
+                        <td colspan="5" width="780"
+                            style="font-family: iransans;text-align:left;padding-left:10px;padding-top:5px;font-size:13px;">
+                            <a href='#' onclick='javascript: ShowOnlineHelp();' style='margin:0 5px;'
+                                data-toggle='tooltip' title='مشاهده راهنما در مورد این صفحه'><i
+                                    class="fa fa-question-circle"></i> راهنما</a>
                             |
-                            <a href='#' onclick='javascript: SendBug();' style="margin:0 5px;color:#b70101; font-size: 12px; font-weight: bolder;">
+                            <a href='#' onclick='javascript: SendBug();'
+                                style="margin:0 5px;color:#b70101; font-size: 12px; font-weight: bolder;">
                                 <i class="fa fa-info-circle"></i>
                                 تیکت (گزارش خطا)
                             </a>
@@ -96,7 +127,8 @@
                     </tr>
                     <tr>
                         <td class="maincontent" height="100%" width="100%" colspan="40" valign="top">
-                            <iframe src="about:blank" name="LeftScr" id="LeftScr" marginwidth="0" marginheight="0" height="100%" width="100%" border="0" frameborder="0"></iframe>
+                            <iframe src="about:blank" name="LeftScr" id="LeftScr" marginwidth="0" marginheight="0"
+                                height="100%" width="100%" border="0" frameborder="0"></iframe>
                         </td>
                     </tr>
                 </table>
