--- a/src/templates/signup_menue.html
+++ b/src/templates/signup_menue.html
@@ -20,12 +20,12 @@
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active" onclick="changeColor(this)">ثبت نام استاد</a>
-            <a href="#" class="list-group-item list-group-item-action" onclick="changeColor(this)">ثبت نام دانشجو</a>
+            <a href="./proffesor_signup.html" class="list-group-item list-group-item-action active" onclick="changeColor(this)">ثبت نام استاد</a>
+            <a href="./student_signup.html" class="list-group-item list-group-item-action" onclick="changeColor(this)">ثبت نام دانشجو</a>
+            <a href="./login_page.html" class="list-group-item list-group-item-action" onclick="changeColor(this)">برگشت به صفحه ورود</a>
         </div>
       </div>
     </div>
-    
     <script src="../static/js/signup_menue.js"></script>
 
   </body>
