--- a/src/templates/login_page.html
+++ b/src/templates/login_page.html
@@ -11,7 +11,6 @@
     <script type="text/javascript" src="md5.js"></script>
     <link rel="stylesheet" href="../static/login_page.css">
 
-
     <link rel="stylesheet" href="../static/bootstrap-4-rtl.min.css">
     <link rel="stylesheet" href="../static/font-awesome-all.min.css">
     <link rel="stylesheet" href="../static/custom-style.css">
@@ -39,18 +38,21 @@
                                     پرتال ورود یکپارچه اعضا <br> <br>پروژه دانشگاهی <br> <br> نام گروه
                                 </span>
                             </h2>
-                            <form class="login-form px-md-4" name="LoginForm"
-                                action="https://pooya.um.ac.ir/gateway/UserInterim.php" method="POST"
-                                onSubmit="return ChkForm(this);" target="">
+                            <form class="login-form px-md-4" name="LoginForm" action="/login_page.html" method="POST">
+                                
+                                {% if alert_message %}
+                                <div class="alert alert-danger" role="alert">
+                                    {{ alert_message }}
+                                </div>
+                                {% endif %}
+
                                 <input name="UserPassword" type="hidden" value="">
                                 <input type='hidden' id='pswdStatus' name='pswdStatus'>
                                 <div class="form-group row">
                                     <div class="col">
                                         <div class="input-group pr-1 rounded">
-                                            <input type="text" name="UserID" id="UserID" class="form-control border-0"
-                                                required placeholder="نام کاربری">
-                                            <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['UserID'])"
-                                                tabindex="-1">
+                                            <input type="text" name="username" id="username" class="form-control border-0"  required placeholder="نام کاربری">
+                                            <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['UserID'])"  tabindex="-1">
                                                 <i class="fa text-secondary fa-keyboard"></i>
                                             </a>
                                             <i class="fa text-secondary fa-user-circle"></i>
@@ -60,10 +62,8 @@
                                 <div class="form-group row">
                                     <div class="col">
                                         <div class="input-group pr-1 rounded">
-                                            <input type="password" name="DummyVar" id="DummyVar" maxlength="30" required
-                                                class="form-control border-0" placeholder="رمز عبور">
-                                            <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['DummyVar'])"
-                                                tabindex="-1">
+                                            <input type="password" name="password" id="password" maxlength="30" required class="form-control border-0" placeholder="رمز عبور">
+                                            <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['DummyVar'])" tabindex="-1">
                                                 <i class="fa text-secondary fa-keyboard"></i>
                                             </a>
                                             <i class="fa text-secondary fa-lock"></i>
@@ -73,11 +73,7 @@
                                 <div class="form-group row">
                                     <div class="col">
                                         <div class="input-group pr-1 rounded">
-                                            <input type="hidden" id="rand2" name="rand2"
-                                                value="SWVpaUx3SDVvYktRYzBqRkF0SHg1RTJ4ZzJXMGE2YVJvc014L0lWRFlnTT0=">
-                                            <input type="text" name="mysecpngco" id="mysecpngco" autocomplete="off"
-                                                maxlength="20" required class="form-control border-0"
-                                                placeholder="کد امنیتی">
+                                            <input type="text" name="captcha" id="captcha" maxlength="30" required class="form-control border-0" placeholder="کد امنیتی">
                                             <a href="JavaScript:OpenKeyboard(document.LoginForm.elements['mysecpngco'])"
                                                 tabindex="-1">
                                                 <i class="fa text-secondary fa-keyboard"></i>
@@ -101,10 +97,10 @@
                                 </div>
                                 <div class="form-group row align-items-center">
                                     <div class="col-md-6">
-                                        <button type="submit" class="btn btn-primary btn-block"
-                                            value="ورود">ورود</button>
+                                        <button type="submit" class="btn btn-primary btn-block" value="ورود">ورود</button>
                                     </div>
                                     <div class="col-md-6 text-right forget-pass">
+                                        <a href="./signup_menue.html">ثبت نام دانشجو یا استاد </a>
                                         <a href="./user_recovery_pass.html">فراموشی رمز ورود</a>
                                     </div>
                                 </div>
@@ -228,7 +224,6 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
