--- a/src/templates/student_signup.html
+++ b/src/templates/student_signup.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../static/bootstrap-4-rtl.min.css">
     <link rel="stylesheet" href="../static/font-awesome-all.min.css">
     <link rel="stylesheet" href="../static/custom-style.css">
-    <link rel="stylesheet" href="../static/student_signup.css">
+    <link rel="stylesheet" href="../static/proffesor_signup.css">
     <script src="../static/js/jquery-3.3.1.min.js"></script>
     <script src="../static/js/popper.min.js"></script>
     <script src="../static/js/bootstrap-4.2.1.min.js"></script>
-    <script src="../static/js/student_signup.js"></script>
+    <script src="../static/js/proffesor_signup.js"></script>
 
 </head>
 
@@ -37,90 +37,121 @@
                                     ثبت نام دانشجو
                                 </span>
                             </h3>
-                            <form name="RecoveryPassForm" id="RecoveryPassForm" action="UserRecoveryPassForm.php.html"
-                                method="POST" onSubmit="" class="login-form px-md-4">
+                            <form name="RecoveryPassForm" id="RecoveryPassForm" action="/student_signup.html" method="POST"  class="login-form px-md-4">
                                 <div class="form-group row">
                                     <div class="col-md-6">
+                                        <label>نام</label>
                                         <div class="input-group pr-1 rounded">
-                                            <input type="text" name="first_name" class="form-control border-0"
-                                                placeholder="نام" required>
+                                            <input type="text" id="first_name" name="first_name" class="form-control border-0" placeholder="نام" required>
                                             <i class="fa text-secondary fa-user-circle"></i>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
+                                        <label>نام خانوادگی</label>
                                         <div class="input-group pr-1 rounded">
-                                            <input type="text" name="mobile" maxlength="11"
-                                                class="form-control border-0" placeholder="نام خانوادگی" required>
+                                            <input type="text" id="last_name" name="last_name" maxlength="11" class="form-control border-0" placeholder="نام خانوادگی" required>
                                             <i class="fa text-secondary fa-mobile-alt"></i>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                    <div class="col-md-6">
+                                    <label>ایمیل</label>
                                        <div class="input-group pr-1 rounded">
-                                           <input type="text" name="first_name" class="form-control border-0"
-                                               placeholder="example@gmail.com" required>
+                                           <input type="email"  id="email" name="email" class="form-control border-0" placeholder="example@gmail.com" required>
                                            <i class="fa text-secondary fa-user-circle"></i>
                                        </div>
                                    </div>
                                    <div class="col-md-6">
+                                    <label>کد ملی</label>
                                        <div class="input-group pr-1 rounded">
-                                           <input type="text" name="mobile" maxlength="11"
-                                               class="form-control border-0" placeholder="کد ملی" required>
+                                           <input type="text" id="national_code" name="national_code" maxlength="11" class="form-control border-0" placeholder="کد ملی" required>
                                            <i class="fa text-secondary fa-mobile-alt"></i>
                                        </div>
                                    </div>
                                </div>
                                <div class="form-group row">
                                    <div class="col-md-6">
+                                    <label>موبایل</label>
                                        <div class="input-group pr-1 rounded">
-                                           <input type="text" name="first_name" class="form-control border-0"
-                                               placeholder="آدرس" required>
+                                           <input type="text" id="mobile" name="mobile" class="form-control border-0" placeholder="موبایل" required>
                                            <i class="fa text-secondary fa-user-circle"></i>
                                        </div>
                                    </div>
                                    <div class="col-md-6">
+                                    <label>جنسیت</label>
+                                    <div class="input-group pr-1 rounded">
+                                     <select  id="gender" , name="gender" class="form-control border-0">
+                                        <option value="">-- انتخاب کنید --</option>
+                                         <option value="mail">مرد</option>
+                                         <option value="femail">زن</option>
+                                       </select>
+                                    </div>
+                                </div>
+                               </div>
+                               <div class="form-group row">
+                                <div class="col-md-6">
+                                    <label>رشته تحصیلی</label>
                                        <div class="input-group pr-1 rounded">
-                                           <input type="text" name="mobile" maxlength="11"
-                                               class="form-control border-0" placeholder="سال ورود" required>
-                                           <i class="fa text-secondary fa-mobile-alt"></i>
+                                        <select id="category" name="category" class="form-control border-0">
+                                            <option value="">-- انتخاب کنید --</option>
+                                            <option value="computer">کامپیوتر</option>
+                                            <option value="electric">برق</option>
+                                          </select>
+                                       </div>
+                                   </div>
+                                   <div class="col-md-6">
+                                    <label>سال ورود</label>
+                                       <div class="input-group pr-1 rounded">
+                                        <select id="entry_year" name="entry_year" class="form-control border-0">
+                                            <option value="">-- انتخاب کنید --</option>
+                                            <option value="1398">1398</option>
+                                            <option value="1399">1399</option>
+                                            <option value="1400">1400</option>
+                                            <option value="1401">1401</option>
+                                            <option value="1402">1402</option>
+                                          </select>
                                        </div>
                                    </div>
                                </div>
                                <div class="form-group row">
-                                   <div class="col-md-6">
-                                       <div class="input-group pr-1 rounded">
-                                           <input type="text" name="first_name" class="form-control border-0"
-                                               placeholder="رشته تحصیلی" required>
-                                           <i class="fa text-secondary fa-user-circle"></i>
-                                       </div>
-                                   </div>
-                                   <div class="col-md-6">
-                                       <div class="input-group pr-1 rounded">
-                                           <input type="text" name="mobile" maxlength="11"
-                                               class="form-control border-0" placeholder="جنسیت" required>
-                                           <i class="fa text-secondary fa-mobile-alt"></i>
-                                       </div>
-                                   </div>
-                               </div>
+                                <div class="col-md-6">
+                                    <label>نام کاربری</label>
+                                    <div class="input-group pr-1 rounded">
+                                        <input type="text" id="user_name" name="user_name" class="form-control border-0" placeholder="نام کاربری" required>
+                                        <i class="fa text-secondary fa-user-circle"></i>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <label>کلمه عبور</label>
+                                    <div class="input-group pr-1 rounded">
+                                        <input type="password" id="password" name="password" maxlength="11" class="form-control border-0" placeholder="کلمه ۶ رقمی" required>
+                                        <i class="fa text-secondary fa-mobile-alt"></i>
+                                    </div>
+                                </div>
+                            </div>
                                 <div class="form-group row align-items-center">
                                     <div class="col-md-6">
-                                        <button type="submit" class="btn btn-primary btn-block"
-                                            name="PassRecovery">
+                                        <button type="submit" class="btn btn-primary btn-block">
                                             ثبت نام
                                         </button>
                                     </div>
                                     <div class="col-md-6">
-                                        <button type="reset" class="btn btn-secondary btn-block">رفتن به صفحه ورود</button>
+                                        <button type="button" class="btn btn-secondary btn-block" onclick="go_to_login()">رفتن به صفحه ورود</button>
                                     </div>
                                 </div>
                             </form>
-                        </div>
+                        </div>  
                     </div>
                 </div>
             </div>
         </div>
     </main>
+    <script>
+        function go_to_login() {
+            window.location.href = "./login_page.html"; 
+               }
+    </script>
 </body>
 
 </html>
